--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta name="description" content="BSkills Offering Web Developent,Andriod Development,iOS Development, Graphic Designing, Digital Marketing, Networking & Data Communication, Search Engine Optimization, Computer Hardware Engineer, MS Office, Shorthand, Stenotypist, IELTS, TOEFL, PTE and Spoken English" />
     <meta name="keywords" content="Web Developent,Andriod Development,iOS Development, Graphic Designing, Digital Marketing, Networking & Data Communication,Search Engine Optimization, Computer Hardware Engineer, MS Office, Shorthand, Stenotypist, IELTS, TOEFL, PTE and Spoken English">
     <meta name="robots" content="index,follow">
+    <meta name="google-site-verification" content="d7Dk3jTfE5nQvc3u-fUbj5xXbiJU2w1YVzMLDuRihnQ" />
     <title>Bskills - IT Training Center</title>
   </head>
   <body>
